- Update SSL certificate and privatekey.
- Add iscsi default values to default config.
- Remove unused hw.ata.to from sysctl.
- Remove AIO disable at boot.
- Add 60days lifetime on ZFS auto snapshot.
- Add ata chipset patch. (VT6420/VT6421)
- Add amdtemp patch.
- Add VM timer workaround.
- Add useful PHP modules.
- Add php wrapper for webserver.
- Add sockstat to Diagnostics|Information|Sockets.
- Use SCSI inquiry for model and serial.
- Upgrade istgt to 20121028.
- Upgrade isboot to 0.2.6.
- Upgrade e2fsprogs to 1.42.6.
- Upgrade to FreeBSD 9.1-RC2.
- Upgrade msmtp to 1.4.29.
- Upgrade xmlstarlet to 1.4.0.
- Upgrade smartmontools to 6.0.
- Upgrade samba to 3.6.8.
- Upgrade php to 5.4.8.
- Upgrade transmission to 2.73.
- Upgrade zoneinfo to 2012h.

Bug fixes:

- Set default timezone.
- Fix broken modifications.
- Fix wrong mount check.
- Remove extra space.
- Fix istgt reload operation is failed.
- Remount zfs dataset after modifying canmount.
- Remove unused empty hosts.
- Add LF to motd.
- Fix missing desc and atime field of ZFS settings.
- Load geom before import disks.
- Remove lock before execute now of rsync client/local.
- Fix using same ifield on file chooser.
- Fix unknown state when creating ZFS pool.
- Fix failure to detect installed device.
- Fix wrong encrypted pass phrase with special characters.
- Reflect owner and permission when ZFS config sync.
- Fix error on empty ZFS config.
- Fix gnop is not deleted at ZFS pool destruction.
- Fix broken serial/model output.
- Fix error on empty iSCSI target.
- Fix VLAN is not configured.
- Fix permission of /var/ftmp.
- Fix AD password that contains a special character is not worked.
- Fix Access AD does not set CIFS Authentication.
- Fix IPv6 auto detection.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.

Known bugs: